[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
sui-verifier = { git = "https://github.com/MystenLabs/sui"}
sui-types = { git = "https://github.com/MystenLabs/sui"}
move-core-types = { git = "https://github.com/move-language/move", rev = "60cec12b1ed9382836aa4c141e445656d39375e1" }
move-binary-format = { git = "https://github.com/move-language/move", rev = "60cec12b1ed9382836aa4c141e445656d39375e1" }
move-bytecode-verifier = { git = "https://github.com/move-language/move", rev = "60cec12b1ed9382836aa4c141e445656d39375e1" }
process_control = "4.0"
crossbeam-channel = "0.5.1"
libc = "0.2"
rlimit = "0.9.1"
fnv = "1.0.7"
mmap = "0.1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }